Measure section add and remove items

--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -426,7 +426,8 @@ div.Workspace {
     padding: 5px;
     margin-right: 5px;
   }
-  li.active .contentSection,li.active:hover .contentSection{
+  li.activeDim .contentSection,li.activeDim:hover .contentSection,
+  li.activeMeasures .contentSection,li.activeMeasures:hover .contentSection{
     background-color: #bcd6df;
   }
   .contentSection:hover{
