height issue fixed

--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -416,7 +416,10 @@ div.Workspace {
   }
   .newSectionWraper i.fa {
     font-size: 23px;
-}
+  }
+  .queryPane .newSectionWraper {
+    height: auto!important;
+  }
   .cursor-pointer{
     cursor: pointer;
   }
