Postgre integration and accordion changes

--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -376,6 +376,10 @@ div.Workspace {
   .positionRelative{
     position: relative;
   }
+  .refresh{
+    position: absolute;
+    right: 0;
+  }
   .newSectionRight .positionAbsolute{
     position: absolute;
     left: -46px;
@@ -418,8 +422,8 @@ div.Workspace {
   }
   .positionAbsolute{
     position: absolute;
-    left: -30px;
-    top: 43px;
+    left: -36px;
+    top: 90px;
     z-index: 9;
   }
   .removeSection{
@@ -520,6 +524,7 @@ div.Workspace {
   height: 100%;
   display: flex;
   flex-direction: column;
+  width: 90%;
 
   .divider {
     border-bottom: 1px solid @gray-bg;
