--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -278,6 +278,19 @@ div.Workspace {
     padding-top: 2px;
   }
 }
+.freezeScreen{
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.3;
+  z-index: 10;
+  position: fixed;
+  text-align: center;
+  display: none;
+}
+.preloader{
+  margin-top: 18%;
+}
 
 .SqlEditor {
   display: flex;
@@ -464,6 +477,9 @@ div.Workspace {
     opacity: 0.6;
     cursor: not-allowed;
   }
+  #sqlData{
+    visibility: hidden;
+  }  
   .tableColumn{
     border: 1px solid #d9d9d9;
     // padding: 11px;
